2006-08-08  Christian Stimming <stimming@tuhh.de>

	* configure.in, src/gnome-utils/schemas/Makefile.am: Find absolute
	path of gconftool-2 during configure. Make gconftool rules to fail
	if gconftool-2 could not be found. bug#349851.

	* src/gnome-utils/druid-gnc-xml-import.c: Improve wording for XML
	data file import druid. bug#342727.

2006-08-06  David Hampton  <hampton@employees.org>

	* various: Regularize the account type names into the form
	ACCT_TYPE_xxx.

2006-08-05  David Hampton  <hampton@employees.org>

	* import-backend.c: gnc_import_process_trans_item() should return
	TRUE in those cases where the transaction has been processed.

	* src/core-utils/gnc-gtk-utils.[ch]:
	* src/core-utils/gnc-gtk-utils.h:
	* src/import-export/import-main-matcher.c:
	* src/report/report-gnome/dialog-style-sheet.c:
	* src/gnome-utils/gnc-main-window.c: Fix compilation errors on
	FC3.

2006-08-05  Andreas Köhler  <andi5.py@gmx.net>

	* various: Unref all new stores.

	* src/gnome-utils/dialog-account.c: Check for account type
	  compatibility when creating a new account. Fixes 344966.

	* src/core-utils/gnc-gtk-utils.c: Unref entry completion, inline
	  completion only for gtk>=2.6.

	* src/gnome-utils/dialog-account.c: I18n "Type", unref store.

2006-08-03  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-reset-warnings.c:
	* src/gnome/schemas/apps_gnucash_warnings.schemas.in: Add tooltips
	  to the checkboxes in the Reset Warnings dialog showing the long
	  descriptions. Remove all linebreaks in these strings to make
	  them look better.

2006-08-02  David Hampton  <hampton@employees.org>

	* various: Remove the majority of the remaining deprecated widgets
	by collapsing the "deprecated-cleanup" branch (r13935:14581) back
	into trunk.  This patch also creates a new file for the code that
	requires a GtkEntry text to match one of its completions.

2006-07-31  Derek Atkins  <derek@ihtfp.com>

	* src/bin/gnucash-bin.c: