@@ -6,13 +6,11 @@ libcore_utils_la_SOURCES = \
   gnc-gdate-utils.c \
   gnc-gkeyfile-utils.c \
   gnc-glib-utils.c \
-  gnc-gobject-utils.c \
-  gnc-gtk-utils.c
+  gnc-gobject-utils.c
 
 libcore_utils_la_LIBADD = \
   ${GLIB_LIBS} \
-  ${GCONF_LIBS} \
-  ${GTK_LIBS}
+  ${GCONF_LIBS}
 
 nodist_libgw_core_utils_la_SOURCES = \
   gw-core-utils.c
@@ -29,8 +27,7 @@ noinst_HEADERS = \
   gnc-gdate-utils.h \
   gnc-gkeyfile-utils.h \
   gnc-glib-utils.h \
-  gnc-gobject-utils.h \
-  gnc-gtk-utils.h
+  gnc-gobject-utils.h
 
 EXTRA_DIST = ${gwmod_DATA}
 
@@ -38,8 +35,7 @@ AM_CFLAGS = \
   ${G_WRAP_COMPILE_ARGS} \
   ${GUILE_INCS} \
   ${GLIB_CFLAGS} \
-  ${GCONF_CFLAGS} \
-  ${GTK_CFLAGS}
+  ${GCONF_CFLAGS}
 
 gwmoddir = ${GNC_GWRAP_LIBDIR}
 gwmod_DATA = gw-core-utils-spec.scm
