@@ -26,10 +26,6 @@
 #include <stdio.h>
 #include "gnc-gobject-utils.h"
 
-#include <gtk/gtk.h>	// For gtk_main_quit(). Can't get this to work with
-			// a g_source attached to the main glib context.
-
-
 static void gnc_gobject_weak_cb (gpointer user_data, GObject *object);
 
 /************************************************************/
